src/hyperscript-transpiler/parser.ts

// Generated by peggy v. 2.0.1 (ts-pegjs plugin v. 3.1.0 )
//
// https://peggyjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface FilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface FileRange {
  start: FilePosition;
  end: FilePosition;
  source: string;
}

export interface LiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface ClassParts extends Array<string | ClassParts> {}

export interface ClassExpectation {
  type: "class";
  parts: ClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface AnyExpectation {
  type: "any";
}

export interface EndExpectation {
  type: "end";
}

export interface OtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = LiteralExpectation | ClassExpectation | AnyExpectation | EndExpectation | OtherExpectation;

function peg$padEnd(str: string, targetLength: number, padString: string) {
  padString = padString || ' ';
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

export class PeggySyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: FileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: FileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "PeggySyntaxError";

    if (typeof (Object as any).setPrototypeOf === "function") {
      (Object as any).setPrototypeOf(this, PeggySyntaxError.prototype);
    } else {
      (this as any).__proto__ = PeggySyntaxError.prototype;
    }
    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, PeggySyntaxError);
    }
  }

  format(sources: { grammarSource?: string; text: string }[]): string {
    let str = 'Error: ' + this.message;
    if (this.location) {
      let src: string[] | null = null;
      let k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].grammarSource === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      let s = this.location.start;
      let loc = this.location.source + ':' + s.line + ':' + s.column;
      if (src) {
        let e = this.location.end;
        let filler = peg$padEnd('', s.line.toString().length, ' ');
        let line = src[s.line - 1];
        let last = s.line === e.line ? e.column : line.length + 1;
        str += '\n --> ' + loc + '\n' + filler + ' |\n' + s.line + ' | ' + line + '\n' + filler + ' | ' +
          peg$padEnd('', s.column - 1, ' ') +
          peg$padEnd('', last - s.column, '^');
      } else {
        str += '\n at ' + loc;
      }
    }
    return str;
  }
}

export interface Cached {
  nextPos: number;
  result: any;
}

function peg$parse(input: string, options?: ParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions: {[id: string]: any} = { toplevel: peg$parsetoplevel };
  let peg$startRuleFunction: () => any = peg$parsetoplevel;

  const peg$c0 = function(): any { return { type: "EmptyProgram" }  };
  const peg$c1 = function(descriptor: any, body: any): any { return { type: 'Feature', event: descriptor.event, body } };
  const peg$c2 = "on";
  const peg$c3 = peg$literalExpectation("on", false);
  const peg$c4 = function(event: any): any { return { event } };
  const peg$c5 = function(head: any, tail: any): any { return [head, ...tail]; };
  const peg$c6 = ";";
  const peg$c7 = peg$literalExpectation(";", false);
  const peg$c8 = "then";
  const peg$c9 = peg$literalExpectation("then", false);
  const peg$c10 = function(first: any, next: any): any {
                     return next ? { type: "CompoundExpression", first, next } : first
  };
  const peg$c11 = "log";
  const peg$c12 = peg$literalExpectation("log", false);
  const peg$c13 = function(arg: any): any { return { type: "LogExpression", args: arg ? [arg[2]] : [] } };
  const peg$c14 = "next";
  const peg$c15 = peg$literalExpectation("next", false);
  const peg$c16 = function(selector: any): any { return { type: "NextExpression", selector } };
  const peg$c17 = "add";
  const peg$c18 = peg$literalExpectation("add", false);
  const peg$c19 = "class";
  const peg$c20 = peg$literalExpectation("class", false);
  const peg$c21 = "to";
  const peg$c22 = peg$literalExpectation("to", false);
  const peg$c23 = function(classList: any, target: any): any {
                return { type: "AddClassExpression", classList, target }
  };
  const peg$c24 = "remove";
  const peg$c25 = peg$literalExpectation("remove", false);
  const peg$c26 = "from";
  const peg$c27 = peg$literalExpectation("from", false);
  const peg$c28 = function(classList: any, target: any): any {
                return { type: "RemoveClassExpression", classList, target }
  };
  const peg$c29 = "set";
  const peg$c30 = peg$literalExpectation("set", false);
  const peg$c31 = function(target: any, value: any): any {
                return { type: "SetExpression", target, value }
  };
  const peg$c32 = "*";
  const peg$c33 = peg$literalExpectation("*", false);
  const peg$c34 = "of";
  const peg$c35 = peg$literalExpectation("of", false);
  const peg$c36 = function(attr: any, target: any): any { return { type: "StyleAttrExpression", attr, target: target && target[5] } };
  const peg$c37 = "wait";
  const peg$c38 = peg$literalExpectation("wait", false);
  const peg$c39 = function(duration: any): any { return { type: "WaitExpression", duration: duration && duration[2] } };
  const peg$c40 = "ms";
  const peg$c41 = peg$literalExpectation("ms", false);
  const peg$c42 = function(value: any): any { return { type: "MillisecondsDurationExpression", value } };
  const peg$c43 = "s";
  const peg$c44 = peg$literalExpectation("s", false);
  const peg$c45 = function(value: any): any { return { type: "SecondsDurationExpression", value } };
  const peg$c46 = /^[0-9]/;
  const peg$c47 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c48 = ".";
  const peg$c49 = peg$literalExpectation(".", false);
  const peg$c50 = function(): any { return { type: "NumberExpression", value: text() } };
  const peg$c51 = "me";
  const peg$c52 = peg$literalExpectation("me", false);
  const peg$c53 = "I";
  const peg$c54 = peg$literalExpectation("I", false);
  const peg$c55 = function(): any { return { type: "SelfReferenceExpression" } };
  const peg$c56 = "call";
  const peg$c57 = peg$literalExpectation("call", false);
  const peg$c58 = "(";
  const peg$c59 = peg$literalExpectation("(", false);
  const peg$c60 = ")";
  const peg$c61 = peg$literalExpectation(")", false);
  const peg$c62 = function(name: any, args: any): any { return { type: "FunctionCallExpression", name, args : args ? args : [] }};
  const peg$c63 = function(head: any, next: any): any { return { type: "IdentifierExpression", value: head, next } };
  const peg$c64 = function(): any { return text() };
  const peg$c65 = /^[a-zA-Z_$]/;
  const peg$c66 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "$"], false, false);
  const peg$c67 = ",";
  const peg$c68 = peg$literalExpectation(",", false);
  const peg$c69 = "click";
  const peg$c70 = peg$literalExpectation("click", false);
  const peg$c71 = "init";
  const peg$c72 = peg$literalExpectation("init", false);
  const peg$c73 = /^[\n]/;
  const peg$c74 = peg$classExpectation(["\n"], false, false);
  const peg$c75 = /^[ \n\t]/;
  const peg$c76 = peg$classExpectation([" ", "\n", "\t"], false, false);
  const peg$c77 = "\"";
  const peg$c78 = peg$literalExpectation("\"", false);
  const peg$c79 = function(chars: any): any {
        return { type: "StringExpression", value: chars.join("") };
      };
  const peg$c80 = peg$anyExpectation();
  const peg$c81 = function(char: any): any { return char };
  const peg$c82 = "\\'";
  const peg$c83 = peg$literalExpectation("\\'", false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  const peg$resultsCache: {[id: number]: Cached} = {};

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): FileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: FileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: FileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): LiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: ClassParts, inverted: boolean, ignoreCase: boolean): ClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): AnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): EndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): OtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): FileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: FileRange) {
    return new PeggySyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: FileRange) {
    return new PeggySyntaxError(
      PeggySyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsetoplevel(): any {
    let s0;

    const key = peg$currPos * 34 + 0;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parsefeature();
    if (s0 as any === peg$FAILED) {
      s0 = peg$parsecompoundExpression();
      if (s0 as any === peg$FAILED) {
        s0 = peg$parseempty();
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseempty(): any {
    let s0, s1;

    const key = peg$currPos * 34 + 1;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0();
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsefeature(): any {
    let s0, s1, s2, s3, s4;

    const key = peg$currPos * 34 + 2;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsefeatureDescriptor();
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parsewhitespace();
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parsefeatureBody();
          if (s4 as any !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s1, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsefeatureDescriptor(): any {
    let s0, s1, s2, s3, s4;

    const key = peg$currPos * 34 + 3;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parsewhitespace();
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parseeventName();
          if (s4 as any !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsefeatureBody(): any {
    let s0, s1, s2, s3, s4, s5;

    const key = peg$currPos * 34 + 4;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsecompoundExpression();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parsecommandDelimeter();
      if (s4 as any !== peg$FAILED) {
        s5 = peg$parsecompoundExpression();
        if (s5 as any !== peg$FAILED) {
          s3 = s5;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parsecommandDelimeter();
        if (s4 as any !== peg$FAILED) {
          s5 = peg$parsecompoundExpression();
          if (s5 as any !== peg$FAILED) {
            s3 = s5;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parsecommandDelimeter();
        if (s3 as any === peg$FAILED) {
          s3 = null;
        }
        if (s3 as any !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsecommandDelimeter(): any {
    let s0, s1, s2, s3;

    const key = peg$currPos * 34 + 5;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 as any !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 59) {
        s2 = peg$c6;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 as any !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsecompoundExpression(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    const key = peg$currPos * 34 + 6;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseexpression();
    if (s1 as any !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parsewhitespace();
      if (s3 as any !== peg$FAILED) {
        s4 = peg$parse_();
        if (s4 as any !== peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c8) {
            s5 = peg$c8;
            peg$currPos += 4;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s5 as any !== peg$FAILED) {
            s6 = peg$parsewhitespace();
            if (s6 as any !== peg$FAILED) {
              s7 = peg$parse_();
              if (s7 as any !== peg$FAILED) {
                s8 = peg$parseexpression();
                if (s8 as any !== peg$FAILED) {
                  s2 = s8;
                } else {
                  peg$currPos = s2;
                  s2 = peg$FAILED;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 as any === peg$FAILED) {
        s2 = null;
      }
      if (s2 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseexpression(): any {
    let s0;

    const key = peg$currPos * 34 + 7;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseaddClassExpression();
    if (s0 as any === peg$FAILED) {
      s0 = peg$parseremoveClassExpression();
      if (s0 as any === peg$FAILED) {
        s0 = peg$parseselfReferenceExpression();
        if (s0 as any === peg$FAILED) {
          s0 = peg$parsesetExpression();
          if (s0 as any === peg$FAILED) {
            s0 = peg$parsestyleAttrExpression();
            if (s0 as any === peg$FAILED) {
              s0 = peg$parsefunctionCallExpression();
              if (s0 as any === peg$FAILED) {
                s0 = peg$parsenextExpression();
                if (s0 as any === peg$FAILED) {
                  s0 = peg$parselogExpression();
                  if (s0 as any === peg$FAILED) {
                    s0 = peg$parsewaitExpression();
                    if (s0 as any === peg$FAILED) {
                      s0 = peg$parseidentifierExpression();
                      if (s0 as any === peg$FAILED) {
                        s0 = peg$parsestringExpression();
                        if (s0 as any === peg$FAILED) {
                          s0 = peg$parsesecondsDurationExpression();
                          if (s0 as any === peg$FAILED) {
                            s0 = peg$parsemillisecondsDurationExpression();
                            if (s0 as any === peg$FAILED) {
                              s0 = peg$parsenumberExpression();
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parselogExpression(): any {
    let s0, s1, s2, s3, s4, s5;

    const key = peg$currPos * 34 + 8;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c11) {
      s1 = peg$c11;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parsewhitespace();
      if (s3 as any !== peg$FAILED) {
        s4 = peg$parse_();
        if (s4 as any !== peg$FAILED) {
          s5 = peg$parseexpression();
          if (s5 as any !== peg$FAILED) {
            s3 = [s3, s4, s5];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 as any === peg$FAILED) {
        s2 = null;
      }
      if (s2 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c13(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsenextExpression(): any {
    let s0, s1, s2, s3, s4;

    const key = peg$currPos * 34 + 9;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c14) {
      s1 = peg$c14;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parsewhitespace();
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parsestringExpression();
          if (s4 as any !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c16(s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseaddClassExpression(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;

    const key = peg$currPos * 34 + 10;
    const cached: Cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
